<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="kr.co.diordna.speedmemo.SettingActivity">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/img_back_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_setting"
            android:textColor="@color/c_212121"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/c_212121"/>

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_select_memo_type"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_select_memo_type"
                    android:textColor="@color/c_212121"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/c_ececec"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_delete_all_memo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_remove_all"
                    android:textColor="@color/c_212121"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/c_ececec"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_version_info"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_version_info"
                    android:textColor="@color/c_212121"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_version_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    tools:text="1.0"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/c_bdbdbd"
                    android:textSize="13sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/c_ececec"/>

            </RelativeLayout>

            <!-- 최신버전 정보 제공 -->
            <!-- 테마 -->
            <!-- 메모 배열 방식 -->

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
